--- a/chap-bunching.qmd
+++ b/chap-bunching.qmd
@@ -1,8 +1,14 @@
 # Repeated Values {#sec-bunching}
 
+This page is about the 'Repeated Values' analysis in the 'Data Auditing' section of the module.
+
+## Purpose of the analysis
+
 The repeated values analysis analyzes the frequency with which values get repeated within a dataset (called “number-bunching”) to statistically identify whether the data were likely tampered with. Unlike Benford’s law this approach examines the entire number at once, not only the first or last digit [@Simohnsohn2019].
 
 To determine whether the data show an excessive amount of bunching, the null hypothesis that the data do not contain an unexpected amount of repeated values is tested. To quantify what is expected, this test requires the assumption that the integer portions of the numbers are not associated with their decimal portions.
+
+## Practical example
 
 Let's explore an example analysis of repeated values. To follow along, open the 'Assessing Benford's Law' dataset from the Data Library. Navigate to the top-left menu, click 'Open', then 'Data Library', select '7. Audit', and finally click on the text 'Assessing Benford's Law' (not the green JASP-icon button).
 
@@ -12,7 +18,7 @@ This will open a dataset with 772 rows and two columns: 'ID' and 'value'. The 'I
 
 ![](img/benford/benford-2.png){fig-align="center" width=100%}
 
-## Main settings
+### Main settings
 
 The interface ...
 
@@ -27,11 +33,11 @@ These are the main settings for the analysis:
 - **Display: Explanatory text:** ...
 - **Display: Confidence:** ...
 
-## Main output
+### Main output
 
 ![](img/bunching/bunching-4.png){fig-align="center" width=40%}
 
-## Report
+### Report
 
 The following settings enable you to expand the report with additional output, such as tables and figures.
 
@@ -53,7 +59,7 @@ The following settings enable you to expand the report with additional output, s
 
   ![](img/bunching/bunching-9.png){fig-align="center" width=75%}
 
-## Advanced
+### Advanced
 
 The following advanced settings allow you to customize the statistical computations according to your preferences.
 
