--- a/chap-estimation.qmd
+++ b/chap-estimation.qmd
@@ -1,5 +1,11 @@
 # True Value Estimation {#sec-estimation}
 
+This page is about the 'True Value Estimation' analysis in the 'Audit Sampling' section of the module.
+
+## Purpose of the analysis
+
+## Practical example
+
 Let's explore an example analysis of a true value estimation analysis. To follow along, open the 'Evaluating a Stratified Sample' dataset from the Data Library. Navigate to the top-left menu, click 'Open', then 'Data Library', select '7. Audit', and finally click on the text 'Evaluating a Stratified Sample' (not the green JASP-icon button).
 
 ![](img/estimation/estimation-1.png){fig-align="center" width=100%}
@@ -8,7 +14,7 @@ This will open a dataset with 1414 rows and five columns: 'ID', 'Stratum', 'Book
 
 ![](img/estimation/estimation-2.png){fig-align="center" width=100%}
 
-## Main settings
+### Main settings
 
 ![](img/estimation/estimation-3.png){fig-align="center" width=75%}
 
@@ -20,11 +26,11 @@ These are the main settings for the analysis:
 - **Display: Explanatory text:** ...
 - **Display: Confidence:** ...
 
-## Main output
+### Main output
 
 ![](img/estimation/estimation-4.png){fig-align="center" width=75%}
 
-## Report
+### Report
 
 The following settings enable you to expand the report with additional output, such as tables and figures.
 
