--- a/chap-planning.qmd
+++ b/chap-planning.qmd
@@ -1,6 +1,12 @@
 # Planning {#sec-planning}
 
-## Main settings
+This page is about the 'Planning' analysis in the 'Audit Sampling' section of the module.
+
+## Purpose of the analysis
+
+## Practical example
+
+### Main settings
 
 ![](img/planning/planning-1.png){fig-align="center" width=75%}
 
@@ -17,11 +23,11 @@ These are the main settings for the analysis:
 
 - **Display: Explanatory text:** ...
 
-## Main output
+### Main output
 
 ![](img/planning/planning-3.png){fig-align="center" width=50%}
 
-## Report
+### Report
 
 The following settings enable you to expand the report with additional output, such as tables and figures.
 
@@ -37,7 +43,7 @@ The following settings enable you to expand the report with additional output, s
 
 - **Format output:** ...
 
-## Advanced
+### Advanced
 
 The following advanced settings allow you to customize the statistical computations according to your preferences.
 
