--- a/chap-selection.qmd
+++ b/chap-selection.qmd
@@ -1,5 +1,11 @@
 # Selection {#sec-selection}
 
+This page is about the 'Selection' analysis in the 'Audit Sampling' section of the module.
+
+## Purpose of the analysis
+
+## Practical example
+
 Let's explore an example of a selection analysis. To follow along, open the 'Testing for Overstatements' dataset from the Data Library. Navigate to the top-left menu, click 'Open', then 'Data Library', select '7. Audit', and finally click on the text 'Testing for Overstatements' (not the green JASP-icon button).
 
 ![](img/selection/selection-1.png){fig-align="center" width=100%}
@@ -8,7 +14,7 @@ This will open a dataset with 3500 rows and three columns: 'ID', 'bookValue', an
 
 ![](img/selection/selection-2.png){fig-align="center" width=100%}
 
-## Main settings
+### Main settings
 
 ![](img/selection/selection-3.png){fig-align="center" width=75%}
 
@@ -22,13 +28,13 @@ These are the main settings for the analysis:
   + **Fixed interval sampling: Starting point:** ...
 - **Display: Explanatory text:** ...
 
-## Main output
+### Main output
 
 ![](img/selection/selection-4.png){fig-align="center" width=75%}
 
 ![](img/selection/selection-5.png){fig-align="center" width=100%}
 
-## Report
+### Report
 
 The following settings enable you to expand the report with additional output, such as tables and figures.
 
@@ -43,7 +49,7 @@ The following settings enable you to expand the report with additional output, s
 
   ![](img/selection/selection-8.png){fig-align="center" width=60%}
 
-## Export
+### Export
 
 The following settings enable you to export the sample to a .csv file.
 
