--- a/chap-fairness.qmd
+++ b/chap-fairness.qmd
@@ -1,6 +1,6 @@
 # Evaluation {#sec-fairness}
 
-This page is about the 'Evaluation' analysis in the 'Algorithm Auditing' section of the module.
+This chapter is about the 'Evaluation' analysis in the 'Algorithm Auditing' section of the module.
 
 ## Purpose of the analysis
 
