--- a/references.bib
+++ b/references.bib
@@ -12,7 +12,7 @@
   year = {2025},
   url = {https://jasp-stats.org/}
 }
-@article{Derks2021_jasp,
+@article{Derks2021,
   title={{JASP} for {A}udit: {B}ayesian tools for the auditing practice},
   author={Derks, Koen and {de Swart}, Jacques and Wagenmakers, {Eric--Jan} and Wille, Jan and Wetzels, Ruud},
   journal={Journal of Open Source Software},
@@ -28,4 +28,14 @@
   month = {May 25},
   url = {http://datacolada.org/77},
   note = {Retrieved from http://datacolada.org/77}
+}
+@article{Derks2023,
+  title={Open-source software als brug tussen de auditor en de statisticus},
+  volume={97},
+  doi={10.5117/mab.97.87480},
+  number={1/2},
+  journal={Maandblad voor Accountancy en Bedrijfseconomie},
+  author={Derks, Koen and de Swart, Jacques and Wetzels, Ruud},
+  year={2023},
+  pages={17--28}
 }
