--- a/chap-fairness-workflow.qmd
+++ b/chap-fairness-workflow.qmd
@@ -1,5 +1,9 @@
 # Fairness Workflow {#sec-fairness-workflow}
 
+::: {.callout-note appearance="simple" .content-visible when-format="html"}
+This page is currently under construction.
+:::
+
 The goal of fairness is ...
 
 ## The X stages in the fairness workflow
