--- a/chap-benford.qmd
+++ b/chap-benford.qmd
@@ -4,7 +4,7 @@ This chapter is about the 'Benford's Law' analysis in the 'Data Auditing' sectio
 
 ## Purpose of the analysis
 
-Benford's law states that the distribution of leading digits in a population naturally follows a certain distribution. Specifically, the frequencies of each digit d$_i$ are defined by *p*(d$_i$) = log$_{10}$(1 + $\frac{1}{d}$), see the figure below. For instance, the probablity of observing a 1 as a leading digit is 0.301, or 30.1%. This can be tested in a statistical manner. That is, the null hypothesis, H$_0$, states that the distribution of first digits follows Benford's law, while the alternative hypothesis, H$_1$, states that it does not.
+Benford's law states that the distribution of leading digits in a population naturally follows a certain distribution. Specifically, the frequencies of each leading digit *d* are defined by *p(d)* = log$_{10}$(1 + $\frac{1}{d}$), see the figure below. For instance, the probablity of observing a 1 as a leading digit is 0.301, or 30.1%. This can be tested in a statistical manner. That is, the null hypothesis, H$_0$, states that the distribution of first digits follows Benford's law, while the alternative hypothesis, H$_1$, states that it does not.
 
 ![](img/benford/benford-1.png){fig-align="center" width=60%}
 
