--- a/references.bib
+++ b/references.bib
@@ -39,3 +39,10 @@
   year={2023},
   pages={17--28}
 }
+@book{Touw2012,
+  title={Statistiek voor Audit en Controlling},
+  author={Touw, Paul and Hoogduin, Lucas},
+  year={2012},
+  publisher={Boom},
+  address={Amsterdam}
+}
